[package]
name = "rusty_store"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.16.0"
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
